[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/enemy_type_1C.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy_bullet_type1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/enemy_bullet_type2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/core_hit.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/sfx/sfx_enemy_core_explode.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/sfx/sfx_enemy_core_hit.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/sfx/sfx_enemy_shoot.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/enemy_type2.png" type="Texture" id=8]
[ext_resource path="res://scripts/core_shield.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 51.1566

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 146.514

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 59.8768

[node name="enemy_1C_shield" type="KinematicBody2D"]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
MOTION_SPEED = 15
bullet1_tscn = ExtResource( 2 )
bullet2_tscn = ExtResource( 3 )
delay = 0.1
switch_bullet = 3
rotating_speed = 50.0
total_health = 35
hit_tscn = ExtResource( 4 )
is_the_core_shielding = true
rotating = true
sfx_tscn_e = ExtResource( 5 )
sfx_tscn_h = ExtResource( 6 )
sfx_tscn_s = ExtResource( 7 )

[node name="sprite" type="Sprite" parent="."]

transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 8 )
modulate = Color( 0.96875, 0.96875, 0.96875, 1 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="muzzle" type="Position2D" parent="."]

transform/pos = Vector2( 0, -60 )

[node name="bullet_container" type="Node" parent="."]

[node name="sfx_container" type="Node" parent="."]

[node name="shield" type="Node2D" parent="."]

[node name="shield_outside" type="StaticBody2D" parent="shield" groups=[ "core_shield" ]]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 9 )
sfx_tscn_h = ExtResource( 6 )

[node name="shield_collision" type="CollisionShape2D" parent="shield/shield_outside"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="shield_inside" type="StaticBody2D" parent="shield" groups=[ "core_shield" ]]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 9 )
sfx_tscn_h = ExtResource( 6 )

[node name="shield_collision" type="CollisionShape2D" parent="shield/shield_inside"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="notifier" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="enter_screen" from="notifier" to="." method="_on_notifier_enter_screen"]

[connection signal="exit_screen" from="notifier" to="." method="_on_notifier_exit_screen"]


